--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>ICT Hall booking</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script> -->
 </head>
 <body>
   <app-root></app-root>
